[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://Pallottole/pallottole scettro viola.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.6589

[sub_resource type="CircleShape2D" id=2]
radius = 14.6816

[node name="Bullet" type="KinematicBody2D" groups=[
"Bullet",
]]
collision_layer = 2147483648
collision_mask = 2147483651
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.23373, 1.02285 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.85405, -0.529732 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Bullet",
]]
position = Vector2( 0.297302, 0.297302 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.891907, -0.594604 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
